More dynamic content

--- a/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
+++ b/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
@@ -71,6 +71,8 @@
 					} else {
 						this.buildWith(value);
 					}
+				}).on('pc-view-postshow', function(e) {
+					window.navbar.setActiveButton('assignments');
 				});
 			},
 			buildWith: function(assignment) {
