--- a/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
+++ b/src/html/components/pc/pc-student-assignment-view/pc-student-assignment-view.html
@@ -84,21 +84,22 @@
 				var lines = assignment.details.split('\n');
 				$(this.$.details).empty();
 				for (var i in lines)
-					$(this.$.details).append($('<p>').html(lines[i]));
+					$(this.$.details).append($(ce('p')).html(lines[i]));
 				
 				$this.find('.dates tbody .assigned').html(assignment.assigned);
 				$this.find('.dates tbody .due').html(assignment.due);
 				
 				$this.find('.status').removeClass('future assigned graded completed overdue').addClass(assignment.status);
 				
-				var filelist = $this.find('.files>ul');
-				filelist.empty();
+				var fileRow = $this.find('.files');
 				if (assignment.files.length == 0) {
-					$this.find('.files').css({display:'none'});
+					fileRow.css({display:'none'});
 				} else {
+					fileRow.css({display:'list-item'});
+					var filelist = fileRow.find('ul').empty();
 					for (var i in assignment.files) {
 						var file = assignment.files[i];
-						var entry = $('<li>').html(file.name);
+						var entry = $(ce('li')).html(file.name);
 						filelist.append(entry);
 					}
 				}
