--- a/src/html/components/pc/pc-student-assignments-view/pc-student-assignments-view.html
+++ b/src/html/components/pc/pc-student-assignments-view/pc-student-assignments-view.html
@@ -115,7 +115,8 @@
 				//TODO add i18n?
 				return dayPrefixes[date.getDay()] + 'day, ' + months[date.getMonth()] + ' ' + date.getDate() + ', ' + date.getFullYear();
 			},
-			prettyDateShort: function(date) {
+			prettyDateShort: function(arg) {
+				var date = (arg instanceof Date) ? arg : new Date(arg);
 				return monthShort[date.getMonth()] + ' ' + date.getDate();
 			}
 		});
