Redid loader.js, worked on transitions

--- a/src/html/components/pc/pc-loading-view/pc-loading-view.html
+++ b/src/html/components/pc/pc-loading-view/pc-loading-view.html
@@ -5,13 +5,6 @@
 		<p>Loading...</p>
 	</template>
 	<script>
-		Polymer({
-			is: 'pc-loading-view',
-			properties: {},
-			ready: function() {
-				window.sidebar=this;
-				console.log('hi!');
-			}
-		});
+		Polymer({is: 'pc-loading-view'});
 	</script>
 </dom-module>
