Made gradients that look bad

--- a/src/html/components/pc/pc-loading-view/pc-loading-view.html
+++ b/src/html/components/pc/pc-loading-view/pc-loading-view.html
@@ -2,7 +2,7 @@
 <dom-module id="pc-loading-view">
 	<link rel="import" type="css" href="pc-loading-view.css"/>
 	<template>
-		<p>Loading...</p>
+		<p>Cuttlefish used PageLoad. It has no effect.</p>
 	</template>
 	<script>
 		Polymer({
