--- a/src/html/components/pc/pc-login-view/pc-login-view.html
+++ b/src/html/components/pc/pc-login-view/pc-login-view.html
@@ -3,9 +3,9 @@
 <dom-module id="pc-login-view">
 	<link rel="import" type="css" href="pc-login-view.css" inline/>
 	<template>
-		<form onsubmit="return false" method="POST">
+		<form onsubmit="return false" method="POST" id="loginform1">
 			<div class="form-group">
-				<pc-input label="Username" name="username"></pc-input>
+				<pc-input label="Username" name="userName"></pc-input>
 			</div>
 			<div class="form-group">
 				<pc-input label="Password" type="password" name="password"></pc-input>
@@ -23,9 +23,22 @@
 					reflectToAttribute: true
 				},
 			},
-			ready: function() {
-				
-			}
+            login: function(){
+            	console.log("Submitted!")
+                function authenticate(userName, password) {
+        		$.ajax
+                    ({
+            			type: "POST",
+            			url: "/data/users.json",
+            			dataType: 'json',
+            			async: true,
+            			data: '{"userName": "' + userName + '", "password" : "' + password + '"}',
+            			success: function() {
+                            alert("YOOOOOOOOOOOOOOO")
+                        }
+                    })
+                }
+            }
 		});
 	</script>
-</dom-module>
+</dom-module
