--- a/src/html/components/pc/pc-stage/pc-stage.css
+++ b/src/html/components/pc/pc-stage/pc-stage.css
@@ -92,6 +92,8 @@ paper-toolbar {
 }
 :host .pc-view {
 	padding-top: 0px;
+	top: 60px;
+	position: absolute;
 }
 :host .pc-view:not([active]){
 	display: none;
