--- a/src/html/components/pc/pc-login-view/pc-login-view.css
+++ b/src/html/components/pc/pc-login-view/pc-login-view.css
@@ -1,24 +1,24 @@
 :host {
+	display: block;
 	width: 100%;
-	min-height: 100%;
-	background-color: rgba(149, 165, 166, 1);/*#95a5a6;*/
+	background-color: #009688;
+	height: calc(100% - 60px);
 }
 :host:not([active]) {
 	display: none;
 }
-:host>form {
-	margin: 4em auto;
-	box-sizing: border-box;
+#loginform {
 	background: #FAFAFA;
+	border-radius: 2px;
 	border: 1px solid #EBEBEB;
 	box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
-	padding: 32px;
+	margin: 4em auto;
 	padding-top: 48px;
-	border-radius: 2px;
+	padding: 32px;
 	position: relative;
 	top: 75px;
 }
-:host>form>.form-group {
+#loginform > .form-group {
 	margin: 0;
 	margin-bottom: 45px;
 }
@@ -33,13 +33,13 @@
 	font-family: RobotoDraft, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	margin: 0;
 }
-:host:not([mobile])>form {
+:host:not([mobile]) > #loginform {
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
 		0  6px 30px 5px rgba(0, 0, 0, 0.12),
 		0  8px 10px -5px rgba(0, 0, 0, 0.4);
 	width: 380px;
 }
-:host[mobile]>form {
+:host[mobile] > #loginform {
 	width: 100%;
 }
 :host[mobile] pc-input {
